src/test/deca/syntax/invalid/our_synt_tests/robin-test7-intTOOlong.deca
// Error: the int type allowed amount of bits is exceeded 

{
int a = 11111111111;
}
